<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/fondo"
    >

<TextView
    android:id="@+id/titulo"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:text="@string/calculadora_financiera"
    android:textAlignment="center"
    android:textSize="19sp"
    android:background="@color/fondotit"
    app:layout_constraintTop_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:textColor="@color/black"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/viewBruto"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/fondocard"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/viewPagas"
        app:cardCornerRadius="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <EditText
                android:id="@+id/inbruto"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hintt"
                android:textAlignment="center"
                android:hint="20000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salario_bruto_anual"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/viewPagas"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/fondocard"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/viewBruto"
        app:cardCornerRadius="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <EditText
                android:id="@+id/inpagas"
                android:layout_width="30dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hintt"
                android:layout_height="60dp"
                android:hint="12"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_de_pagas"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/viewEdad"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/fondocard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/viewProf"
        app:layout_constraintTop_toBottomOf="@id/viewBruto"
        app:cardCornerRadius="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <EditText
                android:id="@+id/inedad"
                android:layout_width="30dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hintt"
                android:layout_height="60dp"
                android:hint="18"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edad"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/viewProf"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/fondocard"
        app:layout_constraintTop_toBottomOf="@id/viewPagas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/viewEdad"
        app:cardCornerRadius="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <Spinner
                android:id="@+id/ingrupo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:entries="@array/grupoprofesional"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grupo_de_profesionalidad"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/viewDisc"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/fondocard"
        app:layout_constraintTop_toBottomOf="@id/viewEdad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/viewEst"
        app:cardCornerRadius="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <Spinner
                android:id="@+id/indisc"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:entries="@array/discapacidades"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grado_de_discapacidad"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/viewEst"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/fondocard"
        app:layout_constraintTop_toBottomOf="@id/viewProf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/viewDisc"
        app:cardCornerRadius="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

        <Spinner
            android:id="@+id/incivil"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:entries="@array/estados_civiles"
            android:textAlignment="center"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estado_civil"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewhijos"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:cardBackgroundColor="@color/fondocard"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@id/viewEst"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewDisc">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inhijos"
                android:layout_width="30dp"
                android:layout_height="60dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/hintt"
                android:hint="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/n_de_hijos"
                android:textColor="@color/black" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/viewmayor"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:cardBackgroundColor="@color/fondocard"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toEndOf="@id/viewhijos"
        app:layout_constraintTop_toBottomOf="@id/viewEst"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/incuidar"
                android:layout_width="30dp"
                android:layout_height="60dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hintt"
                android:textAlignment="center"
                android:hint="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/n_personas_a_cargo"
                android:textColor="@color/black" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttoncalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewhijos"
        android:backgroundTint="@color/boton"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cr_navarra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttoncalc" />

    <Button
       android:id="@+id/botonhelp"
        android:layout_width="89dp"
        android:layout_height="38dp"
        android:backgroundTint="@color/botonhelp"
        android:textColor="@color/black"
        android:text="@string/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/viewmayor"
        app:layout_constraintVertical_bias="0.901" />

</androidx.constraintlayout.widget.ConstraintLayout>